<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".signup"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="627dp"
        android:text="@string/SignUp"
        android:textSize="32sp" />


    <TextView
        android:id="@+id/email_add_text"
        android:layout_width="94dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="285dp"
        android:layout_marginBottom="573dp"
        android:text="@string/Email"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="533dp"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/email_add_text"
        android:ems="10"
        android:hint="@string/Email_Address" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="164dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="459dp"
        android:text="@string/Password"
        android:layout_above="@+id/email_address"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="422dp"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="numberPassword" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="164dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="337dp"
        android:text="@string/username"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="300dp"
        android:drawableLeft="@drawable/baseline_person_24"
        android:ems="10"
        android:hint="@string/Username"
        android:layout_above="@+id/username_text"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="142dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="221dp"
        android:text="@string/Signup"
        android:layout_above="@+id/password"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="-42dp"
        android:layout_marginBottom="158dp"
        android:text="@string/Already_have_an_account"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="139dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="89dp"
        android:text="@string/login" />


</RelativeLayout>