<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="149dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="641dp"
        android:text="Login"
        android:textSize="32sp" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="94dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="573dp"
        android:text="@string/Email"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="169dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="524dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/Email_Address" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="164dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="206dp"
        android:layout_marginBottom="457dp"
        android:text="@string/Password"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="420dp"
        android:autofillHints="password"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:ems="10"
        android:hint="@string/password" />

    <Button
        android:id="@+id/button"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="142dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="321dp"
        android:text="Login" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="375dp"
        android:text="@string/Forgot_Password"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="248dp"
        android:text="@string/SignUp" />

</RelativeLayout>
